--- a/trunk/src/glade/gimmix.glade
+++ b/trunk/src/glade/gimmix.glade
@@ -1373,15 +1373,15 @@ mpd user name and password and click on the Apply button.
 
 <widget class="GtkWindow" id="main_window">
   <property name="border_width">6</property>
-  <property name="width_request">340</property>
   <property name="can_default">True</property>
   <property name="title" translatable="yes">Gimmix</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
   <property name="modal">False</property>
+  <property name="default_width">340</property>
   <property name="resizable">False</property>
   <property name="destroy_with_parent">False</property>
-  <property name="icon_name">gtk-cdrom</property>
+  <property name="icon_name"></property>
   <property name="decorated">True</property>
   <property name="skip_taskbar_hint">False</property>
   <property name="skip_pager_hint">False</property>
@@ -1441,7 +1441,7 @@ mpd user name and password and click on the Apply button.
 			</widget>
 			<packing>
 			  <property name="padding">0</property>
-			  <property name="expand">False</property>
+			  <property name="expand">True</property>
 			  <property name="fill">False</property>
 			</packing>
 		      </child>
@@ -1466,7 +1466,7 @@ mpd user name and password and click on the Apply button.
 			</widget>
 			<packing>
 			  <property name="padding">0</property>
-			  <property name="expand">False</property>
+			  <property name="expand">True</property>
 			  <property name="fill">False</property>
 			</packing>
 		      </child>
@@ -1491,7 +1491,7 @@ mpd user name and password and click on the Apply button.
 			</widget>
 			<packing>
 			  <property name="padding">0</property>
-			  <property name="expand">False</property>
+			  <property name="expand">True</property>
 			  <property name="fill">False</property>
 			</packing>
 		      </child>
@@ -1737,14 +1737,14 @@ mpd user name and password and click on the Apply button.
 			</widget>
 			<packing>
 			  <property name="padding">0</property>
-			  <property name="expand">False</property>
+			  <property name="expand">True</property>
 			  <property name="fill">False</property>
 			</packing>
 		      </child>
 		    </widget>
 		    <packing>
 		      <property name="padding">0</property>
-		      <property name="expand">False</property>
+		      <property name="expand">True</property>
 		      <property name="fill">False</property>
 		    </packing>
 		  </child>
@@ -1762,7 +1762,7 @@ mpd user name and password and click on the Apply button.
 		    </widget>
 		    <packing>
 		      <property name="padding">8</property>
-		      <property name="expand">False</property>
+		      <property name="expand">True</property>
 		      <property name="fill">True</property>
 		    </packing>
 		  </child>
@@ -1776,7 +1776,7 @@ mpd user name and password and click on the Apply button.
 	    </widget>
 	    <packing>
 	      <property name="padding">0</property>
-	      <property name="expand">False</property>
+	      <property name="expand">True</property>
 	      <property name="fill">True</property>
 	    </packing>
 	  </child>
@@ -1789,7 +1789,7 @@ mpd user name and password and click on the Apply button.
       </child>
 
       <child>
-	<widget class="GtkExpander" id="expander1">
+	<widget class="GtkExpander" id="playlist_expander">
 	  <property name="visible">True</property>
 	  <property name="can_focus">True</property>
 	  <property name="expanded">True</property>
@@ -1803,7 +1803,7 @@ mpd user name and password and click on the Apply button.
 
 	      <child>
 		<widget class="GtkNotebook" id="playlist_notebook">
-		  <property name="height_request">220</property>
+		  <property name="height_request">250</property>
 		  <property name="visible">True</property>
 		  <property name="can_focus">True</property>
 		  <property name="show_tabs">True</property>
@@ -1907,7 +1907,7 @@ mpd user name and password and click on the Apply button.
 			  <property name="can_focus">True</property>
 			  <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
 			  <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
-			  <property name="shadow_type">GTK_SHADOW_NONE</property>
+			  <property name="shadow_type">GTK_SHADOW_IN</property>
 			  <property name="window_placement">GTK_CORNER_TOP_LEFT</property>
 
 			  <child>
@@ -1983,6 +1983,8 @@ mpd user name and password and click on the Apply button.
 			      <property name="visible">True</property>
 			      <property name="items" translatable="yes">Artist
 Album
+Title
+Filename
 </property>
 			      <property name="add_tearoffs">False</property>
 			      <property name="has_frame">True</property>
@@ -2082,7 +2084,7 @@ Album
 		</widget>
 		<packing>
 		  <property name="padding">0</property>
-		  <property name="expand">False</property>
+		  <property name="expand">True</property>
 		  <property name="fill">True</property>
 		</packing>
 	      </child>
